# SDSGC-information-tool

./: CMakeLists.txt  DECEMBER-TODO.md  README.md  TODO.md
doc/html/: _add_owned_8cpp.html  _add_owned_8cpp.js  _add_owned_8cpp__incl.map  _add_owned_8cpp__incl.md5  _add_owned_8h.html  _add_owned_8h.js  _add_owned_8h__dep__incl.map  _add_owned_8h__dep__incl.md5  _add_owned_8h__incl.map  _add_owned_8h__incl.md5  _add_owned_8h_source.html  _filter_8cpp.html  _filter_8cpp.js  _filter_8cpp__incl.map  _filter_8cpp__incl.md5  _filter_8h.html  _filter_8h.js  _filter_8h__dep__incl.map  _filter_8h__dep__incl.md5  _filter_8h__incl.map  _filter_8h__incl.md5  _filter_8h_source.html  _hero_8cpp.html  _hero_8cpp.js  _hero_8cpp__incl.map  _hero_8cpp__incl.md5  _hero_8h.html  _hero_8h__dep__incl.map  _hero_8h__dep__incl.md5  _hero_8h__incl.map  _hero_8h__incl.md5  _hero_8h_source.html  _heroes_8cpp.html  _heroes_8cpp.js  _heroes_8cpp__incl.map  _heroes_8cpp__incl.md5  _heroes_8h.html  _heroes_8h.js  _heroes_8h__dep__incl.map  _heroes_8h__dep__incl.md5  (+83 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+40 more)
src/: Filter.cpp  Filter.h  Hero.cpp  Hero.h  Heroes.cpp  Heroes.h  Menu.h  Utilities.cpp  Utilities.h  Utilities.tpp  main.cpp
